syntax = "proto3";

package example;

option go_package = "github.com/go-dyn/app/grpc/protos/example";

message Item {
  uint64 id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
  string updated_at = 5;
}

message ListRequest {}

message PaginateRequest {
  int64 page = 2;
  int64 limit = 3;
}

message ShowRequest {
  uint64 id = 1;
}

message CreateRequest {
  string title = 1;
  string content = 2;
}

message UpdateRequest {
  uint64 id = 1;
  string title = 2;
  string content = 3;
}

message ItemResponse {
  int32 code = 1;
  string message = 2;
  Item item = 3;
}

message ListResponse {
  int32 code = 1;
  string message = 2;
  repeated Item items = 3;
}

message PaginateResponse {
  int32 code = 1;
  string message = 2;
  int64 total = 3;
  int64 page = 4;
  int64 limit = 5;
  repeated Item items = 6;
}

service ExampleService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Paginate(PaginateRequest) returns (PaginateResponse) {}
  rpc Show(ShowRequest) returns (ItemResponse) {}
  rpc Create(CreateRequest) returns (ItemResponse) {}
  rpc Update(UpdateRequest) returns (ItemResponse) {}
}